--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Enea Monzio Compagnoni, MSc. MSc."
   avatar           : "profile.jpg"
-  bio              : "I am a motivated PhD Student in Computer Science and Mathematics. After three years in the financial sector, I decided to have some fun and take my talents elsewhere. I mix unothordox and explosive creativiy with a strongly structured working ethics. Ping me if you need to shake things up in your team!"
+  bio              : "I am a motivated PhD Student in Computer Science and Mathematics. After three years in the financial sector, I decided to have some fun and take my talents elsewhere. I mix unorthordox and explosive creativiy with a strongly structured working ethics. Ping me if you need to shake things up in your team!"
   location         : "Zürich, Switzerland"
   employer         : "University of Basel"
   pubmed           : 
